fixed spacing errors

--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -74,3 +74,7 @@ li{
   width: 50%;
   margin: 0 auto;
 }
+#EXPERIENCE{
+  height: 100px;
+  width:800px;
+}
